💄 🩹 fixed list cell alignment

--- a/components/list/List.module.scss
+++ b/components/list/List.module.scss
@@ -144,7 +144,7 @@
                     text-align: center;
                     align-self: center;
                     border-right: 1px solid $secondary;
-                    padding: auto;
+                    padding: 0.5em 5px;
                     text-overflow: ellipsis;
                     white-space: nowrap;
                     overflow: hidden;
